# aoc2020

./: .gitignore  Cargo.toml  readme.md
examples/: d13a.txt  d13b.txt  d13c.txt  d13d.txt  d13e.txt  day24.txt
src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day17.rs  day18.rs  day2.rs  day24.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs  main.rs
