[package]
name = "aoc2020"
version = "0.1.0"
authors = ["Daniel Boyle <boylede+github@gmail.com>"]
edition = "2018"

[dependencies]
clap = { git = "https://github.com/clap-rs/clap/" }
reqwest = { version = "0.10", features = ["blocking"] }
time = "0.1.40"
select = "0.4.2"
serde = { version = "1.0", features = ["derive"]}
ron = "0.6"

[profile.release]
lto=true
codegen-units = 1
panic = 'abort'
